Add marketing step and increased footfall benefit

--- a/index.html
+++ b/index.html
@@ -266,7 +266,11 @@
                 <p>Our team handles the technical setup — Lightning wallets, payment pointers, QR codes. No technical knowledge required.</p>
             </div>
             <div class="feature">
-                <h3>3. Start Accepting</h3>
+                <h3>3. We Promote You</h3>
+                <p>We market your business to the Bitcoin community — get discovered by thousands of Bitcoiners looking for places to spend their sats.</p>
+            </div>
+            <div class="feature">
+                <h3>4. Start Accepting</h3>
                 <p>Begin accepting Bitcoin payments instantly. Lower fees, instant settlements, access to the growing Bitcoin economy.</p>
             </div>
         </div>
@@ -279,7 +283,8 @@
             <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">💰 <strong>Lower fees</strong> — Fraction of credit card processing costs</li>
             <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">🌍 <strong>Global customers</strong> — Reach Bitcoin holders worldwide</li>
             <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">🔒 <strong>No chargebacks</strong> — Final payments, truly yours</li>
-            <li style="padding: 1rem 0;">🚀 <strong>Future-proof</strong> — Be part of the monetary revolution</li>
+            <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">🚀 <strong>Future-proof</strong> — Be part of the monetary revolution</li>
+            <li style="padding: 1rem 0;">📈 <strong>Increased footfall</strong> — Market your business to the Bitcoin community and attract new customers</li>
         </ul>
     </section>
     
